--- a/deeplink.html
+++ b/deeplink.html
@@ -5,7 +5,15 @@
     <title>リンク付きページ</title>
 </head>
 <body>
-    <h1>リンクサンプル</h1>
+    <h1>リンクサンプル https://app.adjust.com</h1>
     <p><a href="https://app.adjust.com/199lyorq?campaign=ios&adgroup=187&deep_link=mangaup%3A%2F%2Fopen%2Ftitle%3Ftitle_id%3D187%26placement_id%3Dweb" target="_blank">マンガアップを開く</a></p>
+</body>
+<body>
+    <h1>リンクサンプル nl26.adj.st</h1>
+    <p><a href="https://nl26.adj.st/?adj_t=199lyorq&campaign=ios&adgroup=187&deep_link=mangaup%3A%2F%2Fopen%2Ftitle%3Ftitle_id%3D187%26placement_id%3Dweb&adjust_reftag=cFKgs5ivLXOxq&adjust_t=199lyorq&adjust_iredirect=https%3A%2F%2Fapps.apple.com%2Fapp%2Fid1178874028%3Fmt%3D8&adjust_notrack=1" target="_blank">マンガアップを開く</a></p>
+</body>
+<body>
+    <h1>リンクサンプル manga-up.go.link</h1>
+    <p><a href="https://manga-up.go.link?adj_t=199lyorq&campaign=ios&adgroup=187&deep_link=mangaup%3A%2F%2Fopen%2Ftitle%3Ftitle_id%3D187%26placement_id%3Dweb" target="_blank">マンガアップを開く</a></p>
 </body>
 </html>
