--- a/deeplink.html
+++ b/deeplink.html
@@ -16,4 +16,8 @@
     <h1>リンクサンプル manga-up.go.link</h1>
     <p><a href="https://manga-up.go.link?adj_t=199lyorq&campaign=ios&adgroup=187&deep_link=mangaup%3A%2F%2Fopen%2Ftitle%3Ftitle_id%3D187%26placement_id%3Dweb" target="_blank">マンガアップを開く</a></p>
 </body>
+<body>
+    <h1>リンクサンプル 【STG】　https://app.adjust.com</h1>
+    <p><a href="https://app.adjust.com/p9ks8ph?campaign=ios&adgroup=187&deep_link=mangaup%3A%2F%2Fopen%2Ftitle%3Ftitle_id%3D187%26placement_id%3Dweb" target="_blank">マンガアップを開く</a></p>
+</body>
 </html>
