--- a/deeplink.html
+++ b/deeplink.html
@@ -17,7 +17,11 @@
     <p><a href="https://manga-up.go.link?adj_t=199lyorq&campaign=ios&adgroup=187&deep_link=mangaup%3A%2F%2Fopen%2Ftitle%3Ftitle_id%3D187%26placement_id%3Dweb" target="_blank">マンガアップを開く</a></p>
 </body>
 <body>
-    <h1>リンクサンプル 【STG】　https://app.adjust.com</h1>
-    <p><a href="https://app.adjust.com/p9ks8ph?campaign=ios&adgroup=187&deep_link=mangaup%3A%2F%2Fopen%2Ftitle%3Ftitle_id%3D187%26placement_id%3Dweb" target="_blank">マンガアップを開く</a></p>
+    <h1>リンクサンプル 【STG】　88zh.adj.st</h1>
+    <p><a href="https://88zh.adj.st/titles/187?adj_t=p9ks8ph?adj_campaign=ios&adj_adgroup=187" target="_blank">マンガアップを開く</a></p>
+</body>
+<body>
+    <h1>リンクサンプル 【STG】　manga-up.go.link</h1>
+    <p><a href="https://manga-up.go.link/titles/187?adj_t=p9ks8ph&adj_campaign=ios&adj_adgroup=187" target="_blank">マンガアップを開く</a></p>
 </body>
 </html>
