--- a/deeplink.html
+++ b/deeplink.html
@@ -24,4 +24,8 @@
     <h1>リンクサンプル 【STG】　manga-up.go.link</h1>
     <p><a href="https://manga-up.go.link/titles/187?adj_t=p9ks8ph&adj_campaign=ios&adj_adgroup=187" target="_blank">マンガアップを開く</a></p>
 </body>
+<body>
+    <h1>リンクサンプル 【STG】　manga-up.go.link adj_redirectあり</h1>
+    <p><a href="https://manga-up.go.link/titles/1069?adj_t=p9ks8ph&adj_campaign=ios&adj_adgroup=1069&adj_redirect=https%3A%2F%2Fapps.apple.com%2Fjp%2Fapp%2Fid1178874028" target="_blank">マンガアップを開く</a></p>
+</body>
 </html>
